2007-10-07  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf, copy_one_setting_value_to_gconf):
			save UINT64s as strings, because single-precision floats are not
			precise enough at the large values of time(2) to be used, and GConf
			doesn't do either UINT64 or double

2007-10-06  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_save): explicitly send a GConf
			notification since sometimes it seems to get lost in the GConfClient
			cache

2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (foo_wireless_state_change): add the BSSID of the AP NM just connected
			to to the seen-bssids list
		- (foo_device_state_changed_cb): refactor active connection search code
			into get_connection_settings_for_device()
		- (foo_device_state_changed): update active connections before
			device specific handlers
		- (add_seen_bssid): new function; add BSSID of the given AP to the
			given connection's seen-bssids list if its not in the list yet
		- (notify_active_ap_changed_cb, foo_device_added_cb): handle active
			network changes and add new AP's BSSID to the seen-bssids list

2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (foo_bssid_strength_changed): don't access the property directly,
			use the wrapper so that strength will get updated from D-Bus
			if needed
		- (foo_wireless_state_change): clean up periodic strength update code

2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_add_networks_helper): better solution to matching active AP
			with the correct menu item; also block emission of 'activate'
			signal when marking the currently active AP in the menu so that
			unintended activations don't occur

2007-10-05  Dan Williams  <dcbw@redhat.com>

	* src/menu-items.c
	  src/menu-items.h
		- (nm_network_menu_item_find_dupe, nm_network_menu_item_add_dupe): new