@@ -1,3 +1,11 @@
+2007-10-08  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (new_auto_wireless_setting, nma_menu_item_activate): split out
+			creation of a new wireless, and only autoconnect by _default_ if the
+			SSID is not a manufacturer default SSID like 'linksys' or 'NETGEAR'
+		- 
+
 2007-10-07  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
